# FpvGate

./: .gitignore  CMakeLists.txt  EspBase.cpp  EspBase.h  FpvGate.ino  Gate.cpp  Gate.h  GateBuzzer.cpp  GateConfig.h  LLM-context_en.MD  LLM-context_fr.MD  LedStatut.cpp  LedStatut.h  Leds.cpp  Leds.h  README.md  Secrets.h  Secrets.h.sample  SonicSensor.cpp  Starter.cpp  Starter.h  StateLed.cpp  StateLed.h  Wikefluid-20230823142901.xml  esp_base.cpp  esp_base.h  platformio.ini  script.py  wiki.txt
brol/: GateClient.h  Mode.h
cmake/: ArduinoToolchain.cmake
cpt/: Starter.cpp  Starter.h
cpt/modules/: GateBuzzer.cpp  SonicSensor.cpp  TrackHandler.cpp
cpt/modules/headers/: SonicSensor.h  StateLed.h
cpt/unimplemented/: Leds.cpp
includes/: Gate.cpp  Gate.h  Starter.cpp  Starter.h
includes/headers/: Gate.h  Starter.h
includes/modules/: GateBuzzer.cpp  SonicSensor.cpp  StateLed.cpp
includes/modules/headers/: GateBuzzer.h  TrackHandler.h
includes/structs/: GateClient.h
mock/: GateIP.h  a.out  main.cpp
mock/static/: scripts.js
mock/templates/: index.html
modules/: GateBuzzer.h  Leds.cpp  SonicSensor.cpp  SonicSensor.h  StateLed.cpp
modules/starter/: TrackHandler.cpp  TrackHandler.h
old/: main.cpp
old/gate/: Gate.h  Starter.cpp
old/managers/: GatesManager.cpp  GatesManager.h  TrackManager.cpp
old/modules/: GateBuzzer.h  Leds.cpp
old/services/web/: GateWebController.cpp  StarterRestController.cpp  StarterRestController.h  StarterWebController.h
old/structs/: GateClientXXXXX.h  GateMode.h
pauvrecon/: Gate.cpp  Gate.h
src/: Gate.cpp  README.md  Starter.cpp  main.cpp  main_test.cpp
src/clients/: GateClient.h  StarterClient.h
src/config/: GateConfig.h  GateEndPoints.h
src/gate/: Gate.cpp  Gate.h  GateBase.h  Starter.cpp  Starter.h  StarterDev.h
src/gate/wrapper/: GateWrapper.h  StarterWrapper.h
src/headers/: Gate.h  GateBase.h  GateConfig.h  GateWrapper.h  Starter.h
src/headers/modules/: GateWebController.h  Leds.h  SonicSensor.h  StarterWebController.h  StateLed.h  TrackHandler.h
src/headers/structs/: GateClient.h  GateMode.h  LedColor.h  LedMode.h
src/managers/: GatesManager.cpp  GatesManager.h  TrackManager.h
src/modules/: Buzzer.cpp  Buzzer.h  Colors.h  GateBuzzer.cpp  GateBuzzer.h  GateWebController.cpp  IModule.h  LcdDisplay.cpp  LcdDisplay.h  LedStrip.cpp  LedStrip.h  Leds.cpp  Leds.h  MenuButtons.cpp  MenuButtons.h  MenuDisplay.cpp  MenuDisplay.h  Module.h  SimpleLed.cpp  SimpleLed.h  SonicSensor.cpp  SonicSensor.h  StarterWebController.cpp  StateLed.cpp  StateLed.h  TrackHandler.cpp
src/server/: FpvGateServer.cpp  FpvGateServer.h  GateClients.cpp  GateClients.h  ServerRestController.cpp  ServerRestController.h  ServerWebController.cpp  ServerWebController.h
src/server/handlers/: CalibrationHandler.cpp  CalibrationHandler.h  HandlerBase.cpp  HandlerBase.h  IdleHandler.cpp  IdleHandler.h  RaceHandler.cpp  RaceHandler.h  TrackHandler.cpp  TrackHandler.h
src/server/managers/: LcdManager.h  (+4 more)
src/services/: GateService.cpp  GateService.h  RestWebController.cpp  StarterService.cpp  StarterService.h
src/structs/: GateClient.h  GateMode.h  LedColor.h  LedMode.h
src/utils/: WebUtils.cpp  WebUtils.h  WifiUtils.cpp  WifiUtils.h
src/web/: GateWebController.cpp  GateWebController.h
src/wrappers/: GateWrapper.h  StarterWrapper.h  Wrapper.h
(+27 files in other folders)
